--- a/css/login.css
+++ b/css/login.css
@@ -60,8 +60,8 @@ body {
 }
 
 .login-page .header {
-  padding: 70px 90px;
-  height: 170px;
+  padding: 50px 90px;
+  height: 120px;
 }
 
 .login-page .header .logo {
@@ -73,7 +73,7 @@ body {
 }
 
 .login-page .login-content {
-  min-height: calc(100vh - 170px);
+  min-height: calc(100vh - 120px);
   position: relative;
   padding-right: 90px;
 }
@@ -97,43 +97,135 @@ body {
   width: 100%;
 }
 
-.login-page .login-content .login-form {
+.login-page .login-content .login-form,
+.login-page .login-content .agreement-form {
   padding-left: calc(50% + 50px);
 }
 
-.login-page .login-content .login-form .login-header {
+.login-page .login-content .login-form .login-header,
+.login-page .login-content .agreement-form .login-header {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: bold;
-  font-size: 48px;
-  line-height: 58px;
+  font-size: 44px;
+  line-height: 54px;
   color: #000000;
   padding-bottom: 22px;
 }
 
-.login-page .login-content .login-form .under-header {
+.login-page .login-content .login-form .under-header,
+.login-page .login-content .agreement-form .under-header {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 21px;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 18px;
   color: #000000;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
+  max-width: 500px;
 }
 
-.login-page .login-content .login-form .login-input {
-  padding-bottom: 20px;
+.login-page .login-content .login-form .radio-input.has-error label,
+.login-page .login-content .agreement-form .radio-input.has-error label {
+  color: #FF7262;
+}
+
+.login-page .login-content .login-form .radio-input input[type=radio],
+.login-page .login-content .login-form .radio-input input[type=checkbox],
+.login-page .login-content .agreement-form .radio-input input[type=radio],
+.login-page .login-content .agreement-form .radio-input input[type=checkbox] {
+  display: none;
+}
+
+.login-page .login-content .login-form .radio-input input[type=radio]:checked ~ label::before,
+.login-page .login-content .login-form .radio-input input[type=checkbox]:checked ~ label::before,
+.login-page .login-content .agreement-form .radio-input input[type=radio]:checked ~ label::before,
+.login-page .login-content .agreement-form .radio-input input[type=checkbox]:checked ~ label::before {
+  border-color: #7FA2F8;
+}
+
+.login-page .login-content .login-form .radio-input input[type=radio]:checked ~ label .check,
+.login-page .login-content .login-form .radio-input input[type=checkbox]:checked ~ label .check,
+.login-page .login-content .agreement-form .radio-input input[type=radio]:checked ~ label .check,
+.login-page .login-content .agreement-form .radio-input input[type=checkbox]:checked ~ label .check {
+  width: 30px;
+}
+
+.login-page .login-content .login-form .radio-input label,
+.login-page .login-content .agreement-form .radio-input label {
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  font-weight: 200;
+  font-size: 12px;
+  line-height: 13px;
+  color: #000000;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  cursor: pointer;
+  position: relative;
+}
+
+.login-page .login-content .login-form .radio-input label::before,
+.login-page .login-content .agreement-form .radio-input label::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  min-width: 25px;
+  border-radius: 10px;
+  background: #FFFFFF;
+  border: 1px solid #C4C4C4;
+  margin-right: 15px;
+}
+
+.login-page .login-content .login-form .radio-input label .check,
+.login-page .login-content .agreement-form .radio-input label .check {
+  position: absolute;
+  height: 25px;
+  bottom: 5px;
+  left: 3px;
+  width: 0px;
+  -webkit-transition: width 0.3s;
+  -o-transition: width 0.3s;
+  transition: width 0.3s;
+  overflow: hidden;
+  background: url(./../img/checkbox-arrow.svg);
+  background-position: left;
+  -webkit-background-size: 25px auto;
+          background-size: 25px auto;
+  background-repeat: no-repeat;
+}
+
+.login-page .login-content .login-form .login-input,
+.login-page .login-content .agreement-form .login-input {
+  padding-top: 20px;
 }
 
 .login-page .login-content .login-form .login-input.has-error input[type=text],
 .login-page .login-content .login-form .login-input.has-error input[type=email],
 .login-page .login-content .login-form .login-input.has-error input[type=tel],
-.login-page .login-content .login-form .login-input.has-error input[type=password] {
+.login-page .login-content .login-form .login-input.has-error input[type=password],
+.login-page .login-content .agreement-form .login-input.has-error input[type=text],
+.login-page .login-content .agreement-form .login-input.has-error input[type=email],
+.login-page .login-content .agreement-form .login-input.has-error input[type=tel],
+.login-page .login-content .agreement-form .login-input.has-error input[type=password] {
   border-color: #FF7262;
 }
 
 .login-page .login-content .login-form .login-input input[type=text],
 .login-page .login-content .login-form .login-input input[type=email],
 .login-page .login-content .login-form .login-input input[type=tel],
-.login-page .login-content .login-form .login-input input[type=password] {
+.login-page .login-content .login-form .login-input input[type=password],
+.login-page .login-content .agreement-form .login-input input[type=text],
+.login-page .login-content .agreement-form .login-input input[type=email],
+.login-page .login-content .agreement-form .login-input input[type=tel],
+.login-page .login-content .agreement-form .login-input input[type=password] {
   padding: 20px 25px;
   background: #FFFFFF;
   border: 1px solid #C4C4C4;
@@ -150,7 +242,11 @@ body {
 .login-page .login-content .login-form .login-input input[type=text]::-webkit-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=email]::-webkit-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=tel]::-webkit-input-placeholder,
-.login-page .login-content .login-form .login-input input[type=password]::-webkit-input-placeholder {
+.login-page .login-content .login-form .login-input input[type=password]::-webkit-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=text]::-webkit-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=email]::-webkit-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=tel]::-webkit-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=password]::-webkit-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: 300;
   font-size: 13px;
@@ -161,7 +257,11 @@ body {
 .login-page .login-content .login-form .login-input input[type=text]::-moz-placeholder,
 .login-page .login-content .login-form .login-input input[type=email]::-moz-placeholder,
 .login-page .login-content .login-form .login-input input[type=tel]::-moz-placeholder,
-.login-page .login-content .login-form .login-input input[type=password]::-moz-placeholder {
+.login-page .login-content .login-form .login-input input[type=password]::-moz-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=text]::-moz-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=email]::-moz-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=tel]::-moz-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=password]::-moz-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: 300;
   font-size: 13px;
@@ -172,7 +272,11 @@ body {
 .login-page .login-content .login-form .login-input input[type=text]:-ms-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=email]:-ms-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=tel]:-ms-input-placeholder,
-.login-page .login-content .login-form .login-input input[type=password]:-ms-input-placeholder {
+.login-page .login-content .login-form .login-input input[type=password]:-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=text]:-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=email]:-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=tel]:-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=password]:-ms-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: 300;
   font-size: 13px;
@@ -183,7 +287,11 @@ body {
 .login-page .login-content .login-form .login-input input[type=text]::-ms-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=email]::-ms-input-placeholder,
 .login-page .login-content .login-form .login-input input[type=tel]::-ms-input-placeholder,
-.login-page .login-content .login-form .login-input input[type=password]::-ms-input-placeholder {
+.login-page .login-content .login-form .login-input input[type=password]::-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=text]::-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=email]::-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=tel]::-ms-input-placeholder,
+.login-page .login-content .agreement-form .login-input input[type=password]::-ms-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: 300;
   font-size: 13px;
@@ -194,7 +302,11 @@ body {
 .login-page .login-content .login-form .login-input input[type=text]::placeholder,
 .login-page .login-content .login-form .login-input input[type=email]::placeholder,
 .login-page .login-content .login-form .login-input input[type=tel]::placeholder,
-.login-page .login-content .login-form .login-input input[type=password]::placeholder {
+.login-page .login-content .login-form .login-input input[type=password]::placeholder,
+.login-page .login-content .agreement-form .login-input input[type=text]::placeholder,
+.login-page .login-content .agreement-form .login-input input[type=email]::placeholder,
+.login-page .login-content .agreement-form .login-input input[type=tel]::placeholder,
+.login-page .login-content .agreement-form .login-input input[type=password]::placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-weight: 300;
   font-size: 13px;
@@ -202,15 +314,18 @@ body {
   color: #000000;
 }
 
-.login-page .login-content .login-form .btn-cont {
+.login-page .login-content .login-form .btn-cont,
+.login-page .login-content .agreement-form .btn-cont {
   padding-bottom: 20px;
 }
 
-.login-page .login-content .login-form .btns-cont {
-  padding-top: 20px;
+.login-page .login-content .login-form .btns-cont,
+.login-page .login-content .agreement-form .btns-cont {
+  padding-top: 40px;
 }
 
-.login-page .login-content .login-form .btn-submit {
+.login-page .login-content .login-form .btn-submit,
+.login-page .login-content .agreement-form .btn-submit {
   width: 100%;
   max-width: 345px;
   background: -webkit-gradient(linear, left top, right top, from(#7FA1F8), color-stop(35%, #B279F7), color-stop(70%, #C4C4C4), to(#C4C4C4));
@@ -236,12 +351,14 @@ body {
   transition: all 0.3s ease-in;
 }
 
-.login-page .login-content .login-form .btn-submit:hover {
+.login-page .login-content .login-form .btn-submit:hover,
+.login-page .login-content .agreement-form .btn-submit:hover {
   color: #FFFFFF;
   background-position: left;
 }
 
-.login-page .login-content .login-form .btn-enter-google {
+.login-page .login-content .login-form .btn-enter-google,
+.login-page .login-content .agreement-form .btn-enter-google {
   background: #FFFFFF;
   border: 1px solid #C4C4C4;
   -webkit-box-sizing: border-box;
@@ -260,12 +377,14 @@ body {
   max-width: 345px;
 }
 
-.login-page .login-content .login-form .btn-enter-google span {
+.login-page .login-content .login-form .btn-enter-google span,
+.login-page .login-content .agreement-form .btn-enter-google span {
   padding-left: 55px;
   position: relative;
 }
 
-.login-page .login-content .login-form .btn-enter-google span::before {
+.login-page .login-content .login-form .btn-enter-google span::before,
+.login-page .login-content .agreement-form .btn-enter-google span::before {
   content: "";
   width: 41px;
   height: 41px;
@@ -310,42 +429,71 @@ body {
     max-width: 350px;
     margin: auto;
   }
+  .login-page .login-content .agreement-form {
+    padding-left: 0px;
+    padding-top: 20px;
+  }
+  .login-page .login-content .agreement-form .under-header {
+    max-width: none;
+  }
+  .login-page .login-content .agreement-form .btn-submit {
+    max-width: none;
+  }
 }
 
 @media screen and (max-width: 500px) {
   .login-page .header .logo {
     max-width: 80px;
   }
-  .login-page .login-content .login-form .login-header {
+  .login-page .login-content .login-form,
+  .login-page .login-content .agreement-form {
+    max-width: 100%;
+  }
+  .login-page .login-content .login-form .login-header,
+  .login-page .login-content .agreement-form .login-header {
     font-size: 32px;
     line-height: 36px;
     padding-bottom: 15px;
   }
-  .login-page .login-content .login-form .under-header {
+  .login-page .login-content .login-form .under-header,
+  .login-page .login-content .agreement-form .under-header {
     padding-bottom: 20px;
   }
-  .login-page .login-content .login-form .login-input {
-    padding-bottom: 15px;
+  .login-page .login-content .login-form .login-input,
+  .login-page .login-content .agreement-form .login-input {
+    padding-top: 15px;
   }
   .login-page .login-content .login-form .login-input input[type=text],
   .login-page .login-content .login-form .login-input input[type=email],
   .login-page .login-content .login-form .login-input input[type=tel],
-  .login-page .login-content .login-form .login-input input[type=password] {
+  .login-page .login-content .login-form .login-input input[type=password],
+  .login-page .login-content .agreement-form .login-input input[type=text],
+  .login-page .login-content .agreement-form .login-input input[type=email],
+  .login-page .login-content .agreement-form .login-input input[type=tel],
+  .login-page .login-content .agreement-form .login-input input[type=password] {
     padding: 15px 15px;
+    max-width: 100%;
   }
-  .login-page .login-content .login-form .btns-cont {
-    padding-top: 10px;
+  .login-page .login-content .login-form .btns-cont,
+  .login-page .login-content .agreement-form .btns-cont {
+    padding-top: 20px;
   }
-  .login-page .login-content .login-form .btn-submit {
+  .login-page .login-content .login-form .btn-submit,
+  .login-page .login-content .agreement-form .btn-submit {
     padding: 15px;
+    max-width: 100%;
   }
-  .login-page .login-content .login-form .btn-enter-google {
+  .login-page .login-content .login-form .btn-enter-google,
+  .login-page .login-content .agreement-form .btn-enter-google {
     padding: 15px;
+    max-width: 100%;
   }
-  .login-page .login-content .login-form .btn-enter-google span {
+  .login-page .login-content .login-form .btn-enter-google span,
+  .login-page .login-content .agreement-form .btn-enter-google span {
     padding-left: 45px;
   }
-  .login-page .login-content .login-form .btn-enter-google span::before {
+  .login-page .login-content .login-form .btn-enter-google span::before,
+  .login-page .login-content .agreement-form .btn-enter-google span::before {
     width: 33px;
     height: 33px;
     top: -9px;
@@ -359,6 +507,11 @@ body {
   .login-page .login-content {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  .login-page .login-content .login-form .login-header,
+  .login-page .login-content .agreement-form .login-header {
+    font-size: 28px;
+    line-height: 32px;
   }
 }
 /*# sourceMappingURL=login.css.map */
