--- a/css/login.scss
+++ b/css/login.scss
@@ -52,8 +52,8 @@ body {
     width: 100%;
     min-height: 100vh;
     .header {
-        padding: 70px 90px;
-        height: 170px;
+        padding: 50px 90px;
+        height: 120px;
         .logo {
             max-width: 110px;
             img {
@@ -62,7 +62,7 @@ body {
         }
     }
     .login-content {
-        min-height: calc(100vh - 170px);
+        min-height: calc(100vh - 120px);
         position: relative;
         padding-right: 90px;
         .bold {
@@ -81,26 +81,84 @@ body {
                 width: 100%;           
             }
         }
-        .login-form {
+        .login-form,
+        .agreement-form {
             padding-left: calc(50% + 50px);
             .login-header {
                 font-family: $fontPage;
                 font-weight: bold;
-                font-size: 48px;
-                line-height: 58px;
+                font-size: 44px;
+                line-height: 54px;
                 color: $fontColor;
                 padding-bottom: 22px;
             }
             .under-header {
                 font-family: $fontPage;
-                font-weight: 300;
-                font-size: 18px;
-                line-height: 21px;
+                font-weight: 200;
+                font-size: 16px;
+                line-height: 18px;
                 color: $fontColor;
-                padding-bottom: 40px;
+                padding-bottom: 20px;
+                max-width: 500px;
+            }
+            .radio-input {
+                &.has-error {
+                    label {
+                        color: $errorColor;
+                    }
+                }
+                input[type=radio],
+                input[type=checkbox] {
+                    display: none;
+                    &:checked {
+                        & ~ label {
+                            &::before {
+                                border-color: #7FA2F8;
+                            }
+                            .check {
+                               width: 30px;
+                            }
+                        }
+                    }
+                }
+                label {
+                    font-family: $fontPage;
+                    font-weight: 200;
+                    font-size: 12px;
+                    line-height: 13px;
+                    color: $fontColor;
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    cursor: pointer;
+                    position: relative;
+                    &::before {
+                        content: "";
+                        width: 25px;
+                        height: 25px;
+                        min-width: 25px;
+                        border-radius: 10px;
+                        background: #FFFFFF;
+                        border: 1px solid #C4C4C4;
+                        margin-right: 15px;
+                    }
+                    .check {
+                        position: absolute;
+                        height: 25px;
+                        bottom: 5px;
+                        left: 3px;
+                        width: 0px;
+                        transition: width 0.3s;
+                        overflow: hidden;
+                        background: url(./../img/checkbox-arrow.svg);
+                        background-position: left;
+                        background-size: 25px auto;
+                        background-repeat: no-repeat;
+                    }
+                }
             }
             .login-input {
-                padding-bottom: 20px;
+                padding-top: 20px;
                 &.has-error {
                     input[type=text],
                     input[type=email],
@@ -137,7 +195,7 @@ body {
                 padding-bottom: 20px;
             }
             .btns-cont {
-                padding-top: 20px;
+                padding-top: 40px;
             }
             .btn-submit {
                 width: 100%;
@@ -230,6 +288,16 @@ body {
                 max-width: 350px;
                 margin: auto;
             }
+            .agreement-form {
+                padding-left: 0px;
+                padding-top: 20px;
+                .under-header {
+                    max-width: none;
+                }
+                .btn-submit {
+                    max-width: none;
+                }
+            }
         }
     }
 }
@@ -241,7 +309,9 @@ body {
             }
         }
         .login-content {
-            .login-form {
+            .login-form,
+            .agreement-form {
+                max-width: 100%;
                 .login-header {
                     font-size: 32px;
                     line-height: 36px;
@@ -251,22 +321,25 @@ body {
                     padding-bottom: 20px;
                 }
                 .login-input {
-                    padding-bottom: 15px;
+                    padding-top: 15px;
                     input[type=text],
                     input[type=email],
                     input[type=tel],
                     input[type=password] {
                         padding: 15px 15px;
+                        max-width: 100%;
                     }
                 }
                 .btns-cont {
-                    padding-top: 10px;
+                    padding-top: 20px;
                 }
                 .btn-submit {
                     padding: 15px;
+                    max-width: 100%;
                 }
                 .btn-enter-google {
                     padding: 15px;
+                    max-width: 100%;
                     span {
                         padding-left: 45px;
                         &::before {
@@ -287,5 +360,10 @@ body {
     .login-page .login-content {
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .login-page .login-content .login-form .login-header,
+    .login-page .login-content .agreement-form .login-header {
+        font-size: 28px;
+        line-height: 32px;
     }
 }
