--- a/css/login.css
+++ b/css/login.css
@@ -91,10 +91,34 @@ body {
   left: 0px;
   bottom: 0px;
   overflow: hidden;
+  text-align: center;
 }
 
 .login-page .login-content .img-cont img {
-  width: 100%;
+  max-width: 100%;
+}
+
+.login-page .login-content .detail-form-text-cont {
+  position: relative;
+  max-width: 345px;
+}
+
+.login-page .login-content .detail-form-text-cont .detail-form-text {
+  position: absolute;
+  left: calc(100% + 20px);
+  top: 20px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 1px 1px 4px 5px rgba(0, 0, 0, 0.03);
+          box-shadow: 1px 1px 4px 5px rgba(0, 0, 0, 0.03);
+  border-radius: 25px;
+  padding: 25px;
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  width: 215px;
 }
 
 .login-page .login-content .login-form,
@@ -110,6 +134,16 @@ body {
   line-height: 54px;
   color: #000000;
   padding-bottom: 22px;
+}
+
+.login-page .login-content .login-form .login-header-2,
+.login-page .login-content .agreement-form .login-header-2 {
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 27px;
+  color: #000000;
+  padding-bottom: 20px;
 }
 
 .login-page .login-content .login-form .under-header,
@@ -321,7 +355,7 @@ body {
 
 .login-page .login-content .login-form .btns-cont,
 .login-page .login-content .agreement-form .btns-cont {
-  padding-top: 40px;
+  padding-top: 30px;
 }
 
 .login-page .login-content .login-form .btn-submit,
@@ -349,12 +383,36 @@ body {
   -webkit-transition: all 0.3s ease-in;
   -o-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
+  text-decoration: none;
+  display: block;
 }
 
 .login-page .login-content .login-form .btn-submit:hover,
 .login-page .login-content .agreement-form .btn-submit:hover {
   color: #FFFFFF;
   background-position: left;
+}
+
+.login-page .login-content .login-form .btn-white,
+.login-page .login-content .agreement-form .btn-white {
+  background: #FFFFFF;
+  border: 1px solid #C4C4C4;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 15px;
+  cursor: pointer;
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 15px;
+  color: #000000;
+  outline: none;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  max-width: 345px;
+  text-decoration: none;
+  display: block;
 }
 
 .login-page .login-content .login-form .btn-enter-google,
@@ -375,6 +433,8 @@ body {
   text-align: center;
   width: 100%;
   max-width: 345px;
+  text-decoration: none;
+  display: block;
 }
 
 .login-page .login-content .login-form .btn-enter-google span,
@@ -397,6 +457,13 @@ body {
   position: absolute;
   top: -12px;
   left: 0px;
+}
+
+@media screen and (max-width: 1250px) {
+  .login-page .login-content .detail-form-text-cont .detail-form-text {
+    position: initial;
+    width: auto;
+  }
 }
 
 @media screen and (max-width: 992px) {
