--- a/css/custom-select.scss
+++ b/css/custom-select.scss
@@ -113,7 +113,7 @@ $maxWidth: 345px;
                 border-color: $customActive;
             }
             &.active {
-                background: #E5E5E5;
+                background: #eeeeee;
             }
             &[rel="hide"] {
                 display: none;
