--- a/css/login.scss
+++ b/css/login.scss
@@ -64,6 +64,66 @@ body {
             }
         }
     }
+    .login-header {
+        font-family: $fontPage;
+        font-weight: bold;
+        font-size: 44px;
+        line-height: 54px;
+        color: $fontColor;
+        padding-bottom: 22px;
+    }
+    .login-header-2 {
+        font-family: $fontPage;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 27px;
+        color: $fontColor;
+        padding-bottom: 20px;
+    }
+    .btn-submit {
+        width: 100%;
+        max-width: 345px;
+        background: linear-gradient(90deg, $bgColor2 0%, $bgColor1 35%,  #C4C4C4 70%, #C4C4C4 100%);
+        background-size: 300% 100%;
+        background-position: right;
+        border-radius: 15px;
+        font-family: $fontPage;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000000;
+        padding: 17px;
+        text-align: center;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        transition: all 0.3s ease-in;
+        text-decoration: none;
+        display: block;
+        &:hover {
+            color: #FFFFFF;
+            background-position: left;
+        }
+    }
+    .btn-white {
+        background: #FFFFFF;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+        border-radius: 15px;
+        cursor: pointer;
+        font-family: $fontPage;
+        font-weight: 300;
+        font-size: 13px;
+        line-height: 15px;
+        color: $fontColor;
+        outline: none;
+        padding: 20px;
+        text-align: center;
+        width: 100%;
+        max-width: 345px;
+        text-decoration: none;
+        display: block;
+    }
     .login-content {
         min-height: calc(100vh - 120px);
         position: relative;
@@ -108,22 +168,6 @@ body {
         .login-form,
         .agreement-form {
             padding-left: calc(50% + 50px);
-            .login-header {
-                font-family: $fontPage;
-                font-weight: bold;
-                font-size: 44px;
-                line-height: 54px;
-                color: $fontColor;
-                padding-bottom: 22px;
-            }
-            .login-header-2 {
-                font-family: $fontPage;
-                font-weight: 300;
-                font-size: 24px;
-                line-height: 27px;
-                color: $fontColor;
-                padding-bottom: 20px;
-            }
             .under-header {
                 font-family: $fontPage;
                 font-weight: 200;
@@ -229,50 +273,6 @@ body {
             .btns-cont {
                 padding-top: 30px;
             }
-            .btn-submit {
-                width: 100%;
-                max-width: 345px;
-                background: linear-gradient(90deg, $bgColor2 0%, $bgColor1 35%,  #C4C4C4 70%, #C4C4C4 100%);
-                background-size: 300% 100%;
-                background-position: right;
-                border-radius: 15px;
-                font-family: $fontPage;
-                font-weight: bold;
-                font-size: 18px;
-                line-height: 22px;
-                color: #000000;
-                padding: 17px;
-                text-align: center;
-                border: none;
-                outline: none;
-                cursor: pointer;
-                transition: all 0.3s ease-in;
-                text-decoration: none;
-                display: block;
-                &:hover {
-                    color: #FFFFFF;
-                    background-position: left;
-                }
-            }
-            .btn-white {
-                background: #FFFFFF;
-                border: 1px solid #C4C4C4;
-                box-sizing: border-box;
-                border-radius: 15px;
-                cursor: pointer;
-                font-family: $fontPage;
-                font-weight: 300;
-                font-size: 13px;
-                line-height: 15px;
-                color: $fontColor;
-                outline: none;
-                padding: 20px;
-                text-align: center;
-                width: 100%;
-                max-width: 345px;
-                text-decoration: none;
-                display: block;
-            }
             .btn-enter-google {
                 background: #FFFFFF;
                 border: 1px solid #C4C4C4;
@@ -311,6 +311,123 @@ body {
             }
         }
     }
+    .interests-content {
+        text-align: center;
+        padding-top: 30px;
+        padding-left: 90px;
+        padding-right: 90px;
+        padding-bottom: 30px;
+        .login-header {
+            font-family: $fontPage;
+            font-weight: bold;
+            font-size: 44px;
+            line-height: 54px;
+            color: $fontColor;
+            padding-bottom: 22px;
+        }
+        .login-header-2 {
+            font-family: $fontPage;
+            font-weight: 300;
+            font-size: 24px;
+            line-height: 27px;
+            color: $fontColor;
+            padding-bottom: 20px;
+        }
+        .interests-list {
+            max-width: 960px;
+            padding-top: 80px;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            .interest-item {
+                width: 25%;
+                padding-bottom: 20px;
+                input[type=checkbox]{
+                    display: none;
+                    &:checked {
+                        & ~ label {
+                            background: $bgColor2;
+                            .icon {
+                                background: $linearBackground;
+                            }
+                        }
+                    }
+                }
+                label,
+                .item-label {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    width: calc(100% - 10px);
+                    background: #E5E5E5;
+                    border-radius: 30px;
+                    padding: 10px 15px;
+                    transition:  background 0.3s ease;
+                    cursor: pointer;
+                    position: relative;
+                    &:hover {
+                        &::before {
+                            opacity: 1;
+                        }
+                    }
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        right: 0px;
+                        bottom: 0px;
+                        background: $linearBackground;
+                        margin: -1px;
+                        z-index: -1;
+                        border-radius: 30px;
+                        opacity: 0;
+                        transition: opacity 0.3s ease-in;
+                    }
+                    .icon {
+                        width: 39px;
+                        height: 39px;
+                        background: #C4C4C4;
+                        border-radius: 50%;
+                        position: relative;
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            top: 7px;
+                            left: 7px;
+                            right: 7px;
+                            bottom: 7px;
+                            background: url(./../img/icon-hashtag.svg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: contain;
+                        }
+                    }
+                    .name {
+                        text-align: center;
+                        width: calc(100% - 40px);
+                        font-family: $fontPage;
+                        font-weight: bold;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #FFFFFF;
+                        padding-right: 30px;
+                    }
+                }
+            }
+        }
+        .btn-cont {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-top: 50px;
+        }
+    }
+    .hidden {
+        display: none !important;    
+    }
 }
 .datepicker.dropdown-menu th,
 .datepicker.datepicker-inline th,
@@ -342,6 +459,18 @@ body {
         }
     }
 }
+@media screen and (max-width: 1024px) {
+    .login-page {
+        .header {
+            padding: 30px 50px;
+            height: 90px;
+        }
+        .interests-content {
+            padding-left: 50px;
+            padding-right: 50px;
+        }
+    }
+}
 @media screen and (max-width: 992px) {
     .login-page {
         .header {
@@ -352,6 +481,13 @@ body {
             min-height: calc(100vh - 90px);
             padding-right: 40px;
         }
+        .interests-content {
+            padding-left: 40px;
+            padding-right: 40px;
+            .interests-list .interest-item {
+                width: 33.3%;
+            }
+        }
     }
 }
 @media screen and (max-width: 768px) {
@@ -359,6 +495,24 @@ body {
         .header {
             padding: 30px 30px;
             height: 70px;
+        }
+        .interests-content {
+            padding-left: 30px;
+            padding-right: 30px;
+            .interests-list {
+                padding-top: 50px;
+                .interest-item {
+                    width: 50%;
+                }
+            }
+            .login-header {
+                font-size: 32px;
+                line-height: 38px;
+            }
+            .login-header-2 {
+                font-size: 22px;
+                line-height: 26px;
+            }
         }
         .login-content {
             min-height: calc(100vh - 70px);
@@ -393,6 +547,39 @@ body {
                 max-width: 80px;
             }
         }
+        .btn-submit {
+            padding: 15px;
+            max-width: 100%;
+        }
+        .interests-content {
+            .login-header {
+                font-size: 28px;
+                line-height: 32px;
+            }
+            .login-header-2 {
+                font-size: 20px;
+                line-height: 24px;
+            }
+            .interests-list {
+                padding-top: 40px;
+                .interest-item {
+                    width: 50%;
+                    label,
+                    .item-label {
+                        padding: 10px;
+                        .icon {
+                            width: 30px;
+                            height: 30px;
+                        }
+                        .name {
+                            font-size: 14px;
+                            line-height: 18px;
+                            padding-right: 0px;
+                        }
+                    }
+                }
+            }
+        }
         .login-content {
             .login-form,
             .agreement-form {
@@ -418,10 +605,6 @@ body {
                 .btns-cont {
                     padding-top: 20px;
                 }
-                .btn-submit {
-                    padding: 15px;
-                    max-width: 100%;
-                }
                 .btn-enter-google {
                     padding: 15px;
                     max-width: 100%;
@@ -438,11 +621,32 @@ body {
         }
     }
 }
+@media screen and (max-width: 400px) {
+    .login-page {
+        .interests-content {
+            .login-header {
+                font-size: 24px;
+                line-height: 28px;
+            }
+            .login-header-2 {
+                font-size: 18px;
+                line-height: 22px;
+            }
+            .interests-list {
+                padding-top: 40px;
+                .interest-item {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
 @media screen and (max-width: 350px) {
     .login-page .header {
         padding: 30px 20px;
     }
-    .login-page .login-content {
+    .login-page .login-content,
+    .login-page .interests-content {
         padding-left: 20px;
         padding-right: 20px;
     }
