--- a/css/style.css
+++ b/css/style.css
@@ -852,7 +852,9 @@ body {
     width: 120px;
   }
   .page-cont .left-side .main-panel {
-    min-height: 100vh;
+    height: 100vh;
+    /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     width: 120px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
