--- a/css/style.scss
+++ b/css/style.scss
@@ -624,7 +624,9 @@ $color-stack:
             min-height: 100vh;
             width: 120px;
             .main-panel {
-                min-height: 100vh;
+                // min-height: 100vh;
+                height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+                height: calc(var(--vh, 1vh) * 100);
                 width: 120px;
                 border-top-left-radius: 0px;
                 border-bottom-left-radius: 0px;
