--- a/css/style.scss
+++ b/css/style.scss
@@ -627,6 +627,7 @@ $color-stack:
                 // min-height: 100vh;
                 height: 100vh; /* Fallback for browsers that do not support Custom Properties */
                 height: calc(var(--vh, 1vh) * 100);
+                height: -webkit-fill-available;
                 width: 120px;
                 border-top-left-radius: 0px;
                 border-bottom-left-radius: 0px;
@@ -678,7 +679,7 @@ $color-stack:
 @media screen and (max-width: 992px) {
     .page-cont {
         .left-side {
-            position: absolute;
+            position: fixed;
             top: 0px;
             left: 0px;
             width: 0px;
@@ -715,6 +716,17 @@ $color-stack:
         }
         .right-side {
             width: 100%;
+            .top-panel {
+                position: fixed;
+                top: 0px;
+                left: 0px;
+                right: 0px;
+                background: #fff;
+                z-index: 100;
+            }
+            .page-content {
+                padding-top: 80px;
+            }
         }
     }
     .mobile-menu {
