--- a/css/style.scss
+++ b/css/style.scss
@@ -625,12 +625,14 @@ $color-stack:
             width: 120px;
             .main-panel {
                 // min-height: 100vh;
-                height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-                height: calc(var(--vh, 1vh) * 100);
-                height: -webkit-fill-available;
+                // height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+                // height: calc(var(--vh, 1vh) * 100);
+                // height: -webkit-fill-available;
+                height: auto;
+                min-height: initial;
                 width: 120px;
                 border-top-left-radius: 0px;
-                border-bottom-left-radius: 0px;
+                // border-bottom-left-radius: 0px;
             }
         }
         .right-side {
