--- a/css/style.css
+++ b/css/style.css
@@ -857,6 +857,7 @@ body {
     /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
     height: -webkit-fill-available;
+    min-height: initial;
     width: 120px;
     border-top-left-radius: 0px;
   }
